# apsg

./: .gitattributes  .gitignore  .metrics  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  Makefile  Pipfile  README.md  README.rst  _config.yml  animation_example.ipynb  apsg.ipython  apsg.md  apsg.mdw  apsg.py  apsg.shell  apsg_tutorial.ipynb  environment-dev.yml  environment.yml  iapsg  index.html  index.md  makedocs.sh  params.json  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py
.github/workflows/: pythontest.yml  release.yml  testing.yml
apsg/: __init__.py  __main__.py  core.py  db.py  helpers.py  paleomag.py  plotting.py  setting.py  shell.py  strain.py  tensor.py  tensors.py
apsg/algebra/: __init__.py  angle.py  matrix.py  scalar.py  tensor.py  transform.py  vector.py
apsg/algebra/linear/: __init__.py  matrix.py  vector.py
apsg/feature/: __init__.py
apsg/math/: __init__.py  coords.py  helper.py  helpers.py  matrix.py  scalar.py  tensor.py  transform.py  vector.py
apsg/math/algebra/: __init__.py  angle.py  matrix.py  transform.py  vector.py
apsg/math/geometry/: __init__.py
apsg/physics/: __init__.py
cache/: README.pkl  apsg.pkl
ci/: deploy_anaconda.sh  install-miniconda.sh
conda-build/: deploy_anaconda.sh
conda-build/apsg/: meta.yaml
docs/: Makefile  apsg.config.rst  apsg.core.rst  apsg.database.rst  apsg.db.rst  apsg.feature.rst  apsg.helpers.rst  apsg.math.rst  apsg.pandas.rst  apsg.plotting.rst  apsg.rst  apsg.strain.rst  apsg.tensors.rst  authors.rst  automodules.rst  classes.rst  conf.py  contributing.rst  index.rst  installation.rst  make.bat  modules.rst  requirements.txt  tutorial.rst  tutorials.rst  usage.rst
docs/notebooks/: 01_apsg_basics.ipynb  02_apsg_tensors.ipynb  03_apsg_stereonet.ipynb  04_apsg_fabricplots.ipynb  05_apsg_pandas.ipynb  05_apsg_various.ipynb  06_apsg_various.ipynb  07_apsg_database.ipynb  mele.csv  rerender_notebooks.sh  structures.csv  structures_wide.csv
docs/notebooks/.ipynb_checkpoints/: 05_apsg_various-checkpoint.ipynb  aaa.nbconvert-checkpoint.ipynb
examples/: 01_apsg_basics.ipynb  01_math_tutorial.ipynb  02_apsg_tensors.ipynb  03_apsg_stereonet.ipynb  04_apsg_fabricplots.ipynb  05_apsg_various.ipynb  06_apsg_fun.ipynb  animation_example.ipynb  apsg_basics.ipynb  apsg_fabricplots.ipynb  apsg_math_examples.ipynb  apsg_stereonet.ipynb  apsg_tensors.ipynb  apsg_tutorial.ipynb  apsg_various.ipynb
src/apsg/: __init__.py  alchemy.py  config.py  core.py  database.py  db.py  helpers.py  paleomag.py  plotting.py  shell.py  tensors.py
src/apsg/database/: __init__.py  _alchemy.py  _sdbmodels.py  _sdbread.py  _sdbsession.py  alchemy.py  database.py
src/apsg/decorator/: __init__.py  _decorator.py
src/apsg/feature/: __init__.py  _container.py  _geodata.py  _paleomag.py  _statistics.py  _stereogrid.py  _tensor.py  _tensor2.py  _tensor3.py
src/apsg/helpers/: __init__.py  _helper.py  _math.py  _notation.py
src/apsg/math/: __init__.py  _matrix.py  _tensor.py  _vector.py
src/apsg/pandas/: __init__.py  _accessors.py  _gbfunctions.py  _pandas_api.py
src/apsg/plotting/: __init__.py  _contouring.py  _fabricplot.py  _paleomagplots.py  _plot_artists.py  _projection.py  _roseplot.py  _stereogrid.py  _stereonet.py  _stereonet_artist.py  _styles.py
tests/: conftest.py  test_apsg.py  test_containers.py  test_paleomag.py  test_pandas.py  test_tensor.py  test_tensor3.py  test_tensors.py
tests/algebra/: test_vector.py
tests/math/: test_vector.py
