[tool.poetry]
name = "apsg"
version = "1.3.0"
description = "APSG - The package for structural geologists"
authors = ["Ondrej Lexa <lexa.ondrej@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/ondrolexa/apsg"
documentation = "https://apsg.readthedocs.io"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
include = ["AUTHORS.md", "CHANGELOG.md", "CONTRIBUTING.md"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1"
matplotlib = "^3.9"
pyqt5 = "^5.15"
scipy = "^1.14"
sqlalchemy = "^1.3"
pandas = "^2.1"


[tool.poetry.group.docs.dependencies]
sphinx = "*"
ipykernel = "*"
nbsphinx = "*"


[tool.poetry.group.extra.dependencies]
jupyterlab = "^4"


[tool.poetry.group.test.dependencies]
pytest = "*"
black = "*"

[tool.poetry.scripts]
iapsg = "apsg.shell:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
)/
'''

[[tool.poetry.source]]
name = "pypi-public"
url = "https://pypi.org/simple/"
