[project]
name = "apsg"
dynamic = ["version"]
description = "APSG - The package for structural geologists"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["structural geology", "stereonet", "orientation data"]
authors = [{ name = "Ondrej Lexa", email = "lexa.ondrej@gmail.com" }]
maintainers = [{ name = "Ondrej Lexa", email = "lexa.ondrej@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = ["numpy", "matplotlib>=3.9", "scipy", "sqlalchemy", "pandas"]

[project.optional-dependencies]
extra = ["jupyterlab", "pyqt5"]
tests = ["pytest"]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "readthedocs-sphinx-search",
    "ipykernel",
    "nbsphinx",
    "autodocsumm",
]
dev = ["apsg[extra,tests,docs]", "black"]

[project.urls]
Homepage = "https://github.com/ondrolexa/apsg"
Documentation = "https://apsg.readthedocs.io"
Repository = "https://github.com/ondrolexa/apsg.git"
Issues = "https://github.com/ondrolexa/apsg/issues"
Changelog = "https://github.com/ondrolexa/apsg/blob/master/CHANGELOG.md"

[project.scripts]
iapsg = "apsg.shell:main"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "apsg.__version__" }

[tool.black]
line-length = 88
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
)/
'''
