[project]
name = "apsg"
dynamic = ["version"]
description = "APSG - The package for structural geologists"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["structural geology", "stereonet", "orientation data"]
authors = [{ name = "Ondrej Lexa", email = "lexa.ondrej@gmail.com" }]
maintainers = [{ name = "Ondrej Lexa", email = "lexa.ondrej@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = ["numpy", "matplotlib>=3.9", "scipy", "sqlalchemy", "pandas", "pygeomag"]

[project.optional-dependencies]
lab = ["jupyterlab"]
tests = ["pytest", "pytest-cov"]
docs = [
    "sphinx>=7.0",
    "shibuya",
    "sphinx-copybutton",
    "sphinx-design",
    "nbsphinx",
    "pandoc",
    "ipykernel",
    "autodocsumm",
]
dev = ["apsg[lab,tests,docs]", "ruff"]

[project.urls]
Homepage = "https://github.com/ondrolexa/apsg"
Documentation = "https://apsg.readthedocs.io"
Repository = "https://github.com/ondrolexa/apsg.git"
Issues = "https://github.com/ondrolexa/apsg/issues"
Changelog = "https://github.com/ondrolexa/apsg/blob/master/CHANGELOG.md"

[project.scripts]
iapsg = "apsg.shell:main"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "apsg.__version__" }

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [".venv", "docs", ".git"]

[tool.ruff.lint]
ignore = ["E731", "E741"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
